Corrigo detalhes de responsividade

--- a/scss/main.css
+++ b/scss/main.css
@@ -3,11 +3,10 @@ html {
   font-family: Helvetica, Arial, sans-serif;
 }
 
-/* inicio - navbar */
 header {
-  height: 80px;
   background-color: black;
   box-sizing: border-box;
+  margin: 9 auto;
 }
 
 header div.container {
@@ -31,17 +30,15 @@ header div.container {
 
 .separador {
   border: 1px white solid;
-  height: 20px;
+  height: 18px;
   margin: auto 17px;
 }
 
-@media (min-width: 1200px) {
-  body {
-    max-width: 100%;
-    height: 100%;
-    background-color: blue;
-  }
+#navBarPrimary ul li a {
+  margin: 6px 0;
+  display: inline-block;
 }
+
 /*!
  * Bootstrap  v5.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2023 The Bootstrap Authors
