--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,25 +1,26 @@
-html {
+  html {
     font-family: Helvetica,Arial,sans-serif;
 }
-/* inicio - navbar */
-header {
-    height: 80px;
-    background-color: black;    
+
+ header {
+    background-color: black;     
     box-sizing: border-box;
-}
+    margin: 9 auto;
+
+} 
  header div.container{    
     padding: auto;
     margin-top: 9px;
     
     
 } 
-.writerLogo{    
+ .writerLogo{    
     margin: auto 5px;    
     box-sizing: border-box;    
     color: white;
     font-weight: bold;
     font-size: 1.2em;
-}
+} 
 #navBarPrimary ul li a {
     color: white;
     font-weight: bold;
@@ -27,27 +28,28 @@ header {
 }
 .separador {
     border: 1px white solid;    
-    height: 20px;
+    height: 18px;
     margin: auto 17px;
     
-}
+}  
+
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {  }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {  }
-
+#navBarPrimary ul li a {
+    margin: 6px 0;
+    display: inline-block;
+} 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {  }
+@media (min-width: 992px) { 
+    
+ }
 
 // X-Large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { 
-    body {
-        max-width: 100%;
-        height: 100%;
-        background-color: blue;
-        
-    }
+    
  }
 
 // XX-Large devices (larger desktops, 1400px and up)
