--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,6 +49,9 @@ p.termo_condições a {
     margin: auto 17px;
     
 }
+nav#navBarPrimary a:hover {
+    color: #0BC660;
+}
 
 //Primeira section
 .section1 {
