--- a/scss/main.css
+++ b/scss/main.css
@@ -75,7 +75,36 @@ nav#navBarPrimary a:hover {
 .section1 div a {
   font-size: 14px;
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.section2 {
+  margin: 35px 0;
+}
+
+section.section2 h1, section.section2 .h1 {
+  font-weight: 700;
+  margin-bottom: 40px;
+}
+
+div.iconSectionTwo {
+  display: flex;
+  align-items: center;
+}
+
+div.iconSectionTwo i {
+  display: flex;
+  width: 110px;
+  height: 110px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #EEEEEE;
+  margin: 0px 20px 40px 0;
+}
+
+div.iconSectionTwo h2, div.iconSectionTwo .h2 {
+  font-weight: 700;
 }
 
 @media (min-width: 768px) {
@@ -88,6 +117,30 @@ nav#navBarPrimary a:hover {
   .initDescripion {
     font-size: 1.5em;
   }
+  .section2-layout {
+    display: flex;
+    justify-content: center;
+  }
+  div.iconSectionTwo {
+    display: flex;
+    align-items: start;
+  }
+  div.iconSectionTwo i {
+    display: flex;
+    width: 90px;
+    height: 90px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background-color: #EEEEEE;
+    margin: 0 20px 40px 0;
+  }
+  div i.fa-solid {
+    flex-shrink: 0;
+  }
+  div.section2-layout h2, div.section2-layout .h2 {
+    font-size: 1.3em;
+  }
 }
 @media (min-width: 992px) {
   header {
@@ -98,6 +151,42 @@ nav#navBarPrimary a:hover {
   }
   .initDescripion {
     font-size: 2em;
+  }
+  div.iconSectionTwo h2, div.iconSectionTwo .h2 {
+    margin-right: 20px;
+    font-size: 2em;
+  }
+  div.iconSectionTwo i {
+    width: 120px;
+    height: 120px;
+  }
+}
+@media (min-width: 1200px) {
+  div.iconSectionTwo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  div.section2-layout > div {
+    display: flex;
+  }
+  div.iconSectionTwo {
+    width: 285px;
+    height: 285px;
+    box-sizing: border-box;
+  }
+  div.iconSectionTwo i {
+    width: 142px;
+    height: 142px;
+    margin: 0 70px 40px 70px;
+  }
+  div.iconSectionTwo h2, div.iconSectionTwo .h2 {
+    margin: 0 0 10px 0;
+    font-size: 1.3em;
+    text-align: center;
+  }
+  div.iconSectionTwo div p {
+    text-align: center;
   }
 }
 /*!
