corrigo nome de class

--- a/scss/main.css
+++ b/scss/main.css
@@ -108,12 +108,12 @@ div.iconSectionTwo h2, div.iconSectionTwo .h2 {
   font-weight: 700;
 }
 
-div.bgSection3 {
+div.section3 {
   background-color: #EFEFEF;
   padding: 35px 15px;
 }
 
-div.bgSection3 h1, div.bgSection3 .h1 {
+div.section3 h1, div.section3 .h1 {
   font-weight: 700;
 }
 
