--- a/scss/main.scss
+++ b/scss/main.scss
@@ -115,12 +115,12 @@ div.iconSectionTwo h2 {
 }
 
 //inicio da terceira section
-div.bgSection3 {
+div.section3 {
     background-color: #EFEFEF;
     padding: 35px 15px;    
 }
 
-div.bgSection3 h1 {
+div.section3 h1 {
     font-weight: 700;
 }
 
