--- a/scss/main.scss
+++ b/scss/main.scss
@@ -169,6 +169,7 @@ div.card ul li {
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) { 
+    //section 1
     div.section1 div a.btn-dark {
         margin-right: 10px; 
     }
@@ -179,6 +180,8 @@ div.card ul li {
     .initDescripion {
         font-size: 1.5em;
     }
+
+    //section 2
     section.section2 h1{
        font-size: 3em;
        margin-bottom: 80px;
@@ -212,15 +215,18 @@ div.card ul li {
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) { 
+    //navbar
     header {
         height: 80px;
-    }    
+    }
+    //section 1    
     .section1 section.container h1 {
         font-size: 3em;
     }
     .initDescripion {
         font-size: 2em;
     }
+    //section 2
     div.iconSectionTwo h2 {
         margin-right: 20px;
         font-size: 2em;
@@ -233,7 +239,8 @@ div.card ul li {
 
 // X-Large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { 
-    div.iconSectionTwo   { //cada unid
+    //section 2
+    div.iconSectionTwo   {
         display: flex;
         flex-direction: column;        
         align-items: center;       
@@ -259,6 +266,8 @@ div.card ul li {
     div.iconSectionTwo div p {
         text-align: center;
     }
+    
+    //section 3
     div.card {
         width: 300px;
         margin: 0 16px 0 0;
